--- a/src/components/ToneArm.css
+++ b/src/components/ToneArm.css
@@ -1,6 +1,6 @@
 .tone-arm-container {
   position: absolute;
-  top: -2vh;
+  top: 8vh;
   right: -5%;
   width: 150px;
   height: 450px;
